--- a/package.json
+++ b/package.json
@@ -3,16 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "node test/test.js"
+    "deploy": "sls deploy",
+    "test": "sls invoke local -f backup"
   },
-  "author": "Tom McCaffery <tom@weareadjacent.com>",
-  "license": "ISC",
+  "author": "James <james@binary.com.au>",
+  "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.263.1"
+    "source-map-support": "^0.5.11"
   },
-  "directories": {
-    "test": "test"
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.23",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.4",
+    "aws-event-mocks": "0.0.0",
+    "aws-sdk": "^2.436.0",
+    "jest": "^24.7.1",
+    "serverless": "^1.40.0",
+    "serverless-webpack": "^5.2.0",
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.4.1",
+    "webpack": "^4.29.6"
   },
-  "devDependencies": {},
   "description": ""
 }
