--- a/serverless.yml
+++ b/serverless.yml
@@ -10,6 +10,7 @@ provider:
   runtime: nodejs8.10
   memorySize: 256
   region: ap-southeast-2
+  logRetentionInDays: 14
   environment:
     # BACKUP_INSTANCES: 'instance1,instance2'
     # BACKUP_DAYS: 7
@@ -32,6 +33,6 @@ package:
 
 functions:
   backup:
-    handler: index.handler
+    handler: src/index.handler
     events:
-      - schedule: cron(0 3 * * ? *)
+      - schedule: cron(0 16 * * ? *) # 2am Melbourne Time = 16:00 UTC
