--- a/serverless.yml
+++ b/serverless.yml
@@ -7,10 +7,11 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs8.10
+  runtime: nodejs10.x
   memorySize: 256
   region: ap-southeast-2
   logRetentionInDays: 14
+  timeout: 300
   environment:
     # BACKUP_INSTANCES: 'instance1,instance2'
     # BACKUP_DAYS: 7
